--- a/src/styles/basics/_typography.scss
+++ b/src/styles/basics/_typography.scss
@@ -1,4 +1,28 @@
+@font-face {
+    font-family: 'AirLight';
+    src: url(../../../public/assets/fonts/AirbnbCerealLight.woff);
+}
+@font-face {
+    font-family: 'AirBold';
+    src: url(../../../public/assets/fonts/AirbnbCerealBold.woff);
+}
+@font-face {
+    font-family: 'AirMedium';
+    src: url(../../../public/assets/fonts/AirbnbCerealMedium.woff);
+}
+
 // @font-face {
-//     font-family: theFont;
-//     src: url(../../../public/assets/fonts/airbnb-font.woff);
+//     font-family: 'Air';
+//     font-weight: 300;
+//     src: url(../../../public/assets/fonts/AirbnbCerealLight.woff);
+// }
+// @font-face {
+//     font-family: 'Air';
+//     font-weight: 500;
+//     src: url(../../../public/assets/fonts/AirbnbCerealMedium.woff);
+// }
+// @font-face {
+//     font-family: 'Air';
+//     font-weight: 800;
+//     src: url(../../../public/assets/fonts/AirbnbCerealBold.woff);
 // }
