--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+2&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap');
-@font-face {
-    font-family: AirLight;
-    src: url(../../../public/assets/fonts/AirbnbCerealLight.woff);
-}
+// @font-face {
+//     font-family: AirLight;
+//     src: url(../../../public/assets/fonts/AirbnbCerealLight.woff);
+// }
 
 * {
     box-sizing: border-box;
@@ -16,7 +16,7 @@ body{
     margin: 0;
     // background-color: $clr4;
     // font-family: Arial, Helvetica, sans-serif;
-    font-family: AirLight;
+    font-family: 'AirLight';
     // font-family: Circular, -apple-system,theFont, Helvetica ,Neue, sans-serif;
     // font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
     // -webkit-font-smoothing: antialiased;
@@ -30,7 +30,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+p {
     margin: 0;
 }
 
