--- a/src/styles/cmps/_header.scss
+++ b/src/styles/cmps/_header.scss
@@ -5,39 +5,77 @@
     margin-bottom: 20px;
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 2;
     background-color: $clr2;
 
     .main-header {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        position: relative;
 
-        nav {
+        .logo {
+            color: $clr1;
+            font-size: 30px;
+            font-weight: bold;
+        }
 
-            a {
-                color: $clr1;
-                font-size: 30px;
-                font-weight: bold;
+        .dashboard-nav {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            display: flex;
+            gap: 20px;
+            color: $clr4;
+            // font-weight: 600;
+            a.active {
+                position: relative;
+                font-weight: 600;
+                color: $clr3;
+             
+                &::after {
+                    content: '';
+                    position: absolute;
+                    top: calc(100% + 4px);
+                    left:0;
+                    width: 100%;
+                    height: 2px;
+                    border-radius: 5rem;
+                    background-color: $clr3;
+                }
             }
+            // a:hover{
+            //     display: flex;
+            //     justify-content: center;
+            //     align-items: center;
+            //     background-color: $clr7;
+            //     font-weight: 600;
+            //     width: 120px;
+            //     height: 40px;
+            //     border-radius: 60px;
+            //     text-align: center;
+            // }
+           
         }
 
         .user-menu {
             display: flex;
             align-items: center;
             gap: 10px;
-            
-            .host-link-con {
+
+            .host-link {
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 border-radius: 60px;
                 padding: 8px 0px 8px 0px;
                 height: 44px;
-                width: 130px;
-                
+                width: 140px;
                 align-content: center;
-
+                // font-family: 'AirMedium';
+                font-size: rem(15px);
+                font-weight: 600;
                 &:hover {
                     background-color: $clr7;
                 }
@@ -48,15 +86,17 @@
                 align-items: center;
                 justify-content: space-around;
                 border: 1px solid $clr6;
+                position: relative;
                 // border-radius: 21px;
                 border-radius: 60px;
                 // padding: 4px 4px 4px 10px;
-                padding: 8px 0px 8px 0px;
+                padding: 8px 0;
                 // gap: 13px;
                 position: relative;
                 box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08), 0 4px 12px rgba(0, 0, 0, 0.05);
                 height: 44px;
                 width: 77px;
+                padding-inline-start: 12px;
 
                 span {
                     font-size: rem(16px);
@@ -95,36 +135,62 @@
 
                 }
 
-            }
 
 
-            .dropdown-content {
-                position: absolute;
-                z-index: 1;
-                display: flex;
-                flex-direction: column;
-                top: 75px;
-                right: 151px;
-                // left: 10px;
-                background-color: $clr2;
-                // gap: 10px;
-                border-radius: 10px;
-                width: 200px;
-                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
-                transition: box-shadow 0.2s ease;
-                overflow: hidden;
 
-                span {
-                    padding: 10px 10px 10px 10px;
+                .dropdown-content {
+                    position: absolute;
+                    z-index: 1;
+                    display: flex;
+                    flex-direction: column;
+                    top: calc(100% + 2px);
+                    right: 0;
+                    // left: 10px;
+                    background-color: $clr2;
+                    // gap: 10px;
+                    border-radius: 10px;
+                    width: 220px;
+                    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
+                    transition: box-shadow 0.2s ease;
+                    overflow: hidden;
+                    padding: 5px 0px 10px 0px;
+                    font-size: rem(16px);
 
-                    &:hover {
-                        cursor: pointer;
-                        //   box-shadow: 0 2px 4px rgba(0,0,0,0.18);
-                        //     transition: box-shadow 0.2s ease;
-                        background-color: $clr7 ;
-                        // border-radius: 10px;
+                    >* {
+                        padding: 10px 10px 10px 10px;
+
+                        &:hover {
+                            cursor: pointer;
+                            //   box-shadow: 0 2px 4px rgba(0,0,0,0.18);
+                            //     transition: box-shadow 0.2s ease;
+                            background-color: $clr7 ;
+                            // border-radius: 10px;
+                        }
                     }
                 }
+            }
+        }
+
+        &.expended {
+            // height: 120px;
+
+            // //    align-items: center;
+            // nav {
+            //     align-self: flex-start;
+
+            // }
+
+            // .user-menu {
+            //     align-self: flex-start;
+            // }
+            display: grid;
+            grid-template-rows: repeat(2, auto);
+            grid-template-columns: repeat(2, 250px);
+            grid-auto-flow: dense;
+            gap: 20px;
+
+            .user-menu {
+                justify-self: end;
             }
         }
     }
