--- a/src/styles/cmps/_user-trip.scss
+++ b/src/styles/cmps/_user-trip.scss
@@ -4,4 +4,71 @@
         font-size: rem(38px);
         padding-bottom: 20px;
     }
+
+    .img-container {
+        width: 130px;
+        height: 115px;
+        border-radius: 7px;
+    }
+
+    .trip-banner-wrapper{
+        display: flex;
+        outline: 1px solid $clr5;
+        border-radius: 12px;
+        overflow: hidden;
+        width: 100%;
+        height: 40vh;
+        .icn{
+            width: 50px;
+            height: 50px;
+            
+        }
+        .banner-text-con{
+            display: flex;
+            flex-direction: column;
+            justify-content: center; 
+            padding: 32px;   
+            gap: 10px;                    
+            .title{
+                font-size: rem(25px);
+                color: $clr3;
+                margin-bottom: 10px;
+            }
+            .sub{
+             font-size: rem(16px);
+             color: $clr4;
+             margin: 0;
+            //  margin-bottom: 10px;
+            } 
+
+            .link-explore{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 200px;
+                height: 50px;
+                background-color: $clr1;
+                border-radius: 10px;
+                color: $clr2;
+                margin-top: 16px;
+                font-size: rem(18px);
+                
+            }
+        }
+        .img-container{
+            // flex-grow: 1;
+            width: 100%;
+            height: 100%;
+            padding: 0;
+            margin: 0;
+            background-clip: border-box;
+        // background-clip: padding-box;
+
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+    }
 }
