--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,15 +2,16 @@
 // BASICS
 @import 'basics/base';
 @import 'basics/variables';
-@import 'basics/layout';
 @import 'basics/functions';
 @import 'basics/mixins';
+@import 'basics/layout';
 @import 'basics/helpers';
 @import 'basics/typography';
 //views
 @import 'views/stay-details';
 @import 'views/become-host';
 @import 'views/user-profile';
+@import 'views/hosting-reservation';
 
 
 // COMPONENTS
@@ -20,8 +21,10 @@
 @import 'cmps/footer';
 @import 'cmps/stay-reservation';
 @import 'cmps/filter';
-@import 'cmps/main-filter';
+@import 'cmps/explore-filter';
 @import 'cmps/login-signup';
+@import 'cmps/listing';
+@import 'cmps/brand-btn';
 
 
 ///USER CMPS
