--- a/src/styles/views/_become-host.scss
+++ b/src/styles/views/_become-host.scss
@@ -10,6 +10,7 @@
         // justify-content: center;
         background: rgb(255, 56, 92);
         background: linear-gradient(356deg, rgba(255, 56, 92, 1) 56%, rgba(255, 255, 255, 1) 100%);
+        padding: 40px;
 
         .questions-con {
             >* {
@@ -17,7 +18,7 @@
                 max-width: 450px;
                 color: $clr2;
                 font-weight: bold;
-                margin-left: 40px;
+                // margin-left: 40px;
             }
 
         }
@@ -52,12 +53,15 @@
             flex-direction: column;
             gap: 15px;
             margin: auto;
+
             >* {
                 padding: 20px;
                 border: 2px solid $clr6;
                 border-radius: 11px;
                 transition: 0.2s;
                 width: 350px;
+                font-size: rem(20px);
+                font-weight: 600;
             }
 
             .active {
@@ -85,6 +89,8 @@
                 transition: 0.2s ease-in;
                 // transition: 0.2s ;
                 width: 350px;
+                font-size: rem(20px);
+                font-weight: 600;
 
             }
 
@@ -103,16 +109,21 @@
             display: flex;
             flex-direction: column;
             width: 450px;
-            gap: 25px;
+            gap: 50px;
             margin: auto;
+
             >* {
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
+                // font-family: AirBold;
+
             }
 
             .value-title {
-                font-size: rem(22px);
+                font-size: rem(28px);
+                font-weight: 600;
+                letter-spacing: 0.05rem;
             }
 
             .nums-con {
@@ -122,8 +133,9 @@
 
                 span {
                     //    padding: 0px 10px 0px 10px;
-                    font-size: rem(20px);
+                    font-size: rem(18px);
                     color: $clr3;
+                    font-weight: 600;
                 }
 
                 .btn {
@@ -139,7 +151,15 @@
                     cursor: pointer;
 
                     //    padding: 2px 2px 2px 2px;
-                    &.btn-dec {}
+                    &:hover {
+                        border: 1px solid $clr3;
+                        color: $clr3;
+                    }
+
+                    &:disabled {
+                        color: $clr6;
+                        border: 1px solid $clr6;
+                    }
                 }
             }
 
@@ -153,6 +173,32 @@
 
             .btn-inc {}
 
+        }
+
+        .address-con {
+            margin: auto;
+
+            form {
+                display: flex;
+                flex-direction: column;
+                gap: 40px;
+
+                input {
+                    width: 300px;
+                    height: 70px;
+                    border-radius: 17px;
+                    background-color: $clr2;
+                    outline: none;
+                    border: 1px solid $clr5;
+                    font-size: rem(20px);
+                    padding-inline-start: 20px;
+
+                    &::placeholder {
+                        font-size: rem(20px);
+                        // padding-inline-start: 10px;
+                    }
+                }
+            }
         }
 
         .amenities-con {
@@ -188,6 +234,7 @@
             // height: 80vh;
             // overflow: hidden;
             margin: 5px 0px 50px 0px;
+
             // margin: auto;
             .drop-con {
                 overflow-y: scroll;
@@ -199,44 +246,59 @@
                 justify-content: center;
                 padding: 20px;
                 height: 80vh;
-                
+
                 .do-it {
                     display: flex;
                     flex-direction: column;
                     align-items: center;
                 }
-                .drop-gallery-wrapper{
+
+                .drop-gallery-wrapper {
                     display: grid;
                     grid-template-columns: 1fr 1fr;
-                    grid-template-rows: 1fr 1fr 1fr ;
+                    grid-template-rows: 1fr 1fr 1fr;
                     width: 600px;
                     height: 700px;
                     column-gap: 10px;
                     row-gap: 12px;
-                    margin-bottom: 200px;
-                    margin-top: 200px;
-                    .img-con{
+                    // margin-bottom: 200px;
+                    // margin-top: 200px;
+
+                    .img-con {
                         // width: 200px;
+                        position: relative;
                         // height: 200px;
                         width: 100%;
                         height: 200px;
                         // object-fit: cover;
                         outline: 1px dashed $clr5;
-                        &.cover{
+
+                        .img-menu-icon {
+                            position: absolute;
+                            top: 10px;
+                            right: 10px;
+                            // transform: translate(-50%, -50%);
+                            background-color: #fff;
+                            padding: 5px 10px;
+                            cursor: pointer;
+                        }
+
+                        &.cover {
                             grid-column: 1/3;
                             // grid-row: 1/2;
                             width: 100%;
                             height: 400px;
-                            margin-top: 100px;
+                            // margin-top: 100px;
                         }
-                        img{
+
+                        img {
                             width: 100%;
                             height: 100%;
                             object-fit: cover;
                         }
-                        
-                        &.full{
-                           outline: none; 
+
+                        &.full {
+                            outline: none;
                         }
                     }
                 }
@@ -246,11 +308,16 @@
         }
 
         .listing-title-con {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
             margin: auto;
 
             .listing-title {
-                font-size: rem(20px);
+                font-size: rem(23px);
                 color: $clr3;
+                font-weight: 600;
+                // font-family: AirBold;
             }
 
             .listing-subtitle {
@@ -263,11 +330,15 @@
                 border: 1px solid $clr5;
                 border-radius: 10px;
                 outline: none;
-                width: 500px;
+                width: 100%;
+                // width: 500px;
                 height: 200px;
                 font-size: rem(40px);
                 padding: 15px;
+                font-family: 'AirLight';
+                font-weight: bold;
 
+                // font-family: AirBold;
                 &::placeholder {
                     font-size: rem(40px);
                 }
@@ -276,10 +347,14 @@
 
         .description-con {
             margin: auto;
+            display: flex;
+            flex-direction: column;
+            gap: 25px;
 
             .description-title {
-                font-size: rem(20px);
+                font-size: rem(25px);
                 color: $clr3;
+                font-weight: 600;
             }
 
             textarea {
@@ -291,10 +366,16 @@
                 height: 200px;
                 font-size: rem(20px);
                 padding: 15px;
+                font-family: 'AirLight';
+                // font-weight: 500;
             }
         }
 
         .pricing-con {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 53px;
             margin: auto;
 
             .setting-price {
@@ -307,15 +388,15 @@
                     display: flex;
                     flex-direction: column;
                     align-items: center;
-                    
+
                     padding: 20px;
 
                     input[type=number] {
-                        width: 250px;
-                        height: 90px;
+                        width: 300px;
+                        height: 120px;
                         text-align: center;
                         color: $clr3;
-                        font-size: rem(50px);
+                        font-size: rem(65px);
                         border-radius: 10px;
                         outline: none;
                         border: 2px solid $clr5;
@@ -338,6 +419,47 @@
                         margin: 0;
                     }
                 }
+
+                .btn {
+                    display: grid;
+                    align-items: center;
+                    width: 50px;
+                    height: 50px;
+                    border: 1px solid $clr5;
+                    border-radius: 50%;
+                    font-size: rem(25px);
+                    color: $clr4;
+                    background-color: $clr2;
+                    cursor: pointer;
+
+                    //    padding: 2px 2px 2px 2px;
+                    &:hover {
+                        border: 1px solid $clr3;
+                        color: $clr3;
+                    }
+
+                    &:disabled {
+                        color: $clr6;
+                        border: 1px solid $clr6;
+                    }
+                }
+            }
+
+            .info {
+                width: 50%;
+                font-size: rem(19px);
+                text-align: center;
+                font-weight: 600;
+                letter-spacing: rem(0.5px);
+            }
+
+            .tips-con {
+                width: 80%;
+                border: 1px solid $clr6;
+                border-radius: 15px;
+                padding: 20px;
+                font-size: rem(16px);
+                font-weight: 600;
             }
         }
 
@@ -349,6 +471,7 @@
             column-gap: 20px;
             overflow-y: auto;
             margin: auto;
+
             >* {
                 border: 2px solid $clr6;
                 border-radius: 11px;
@@ -364,12 +487,87 @@
             }
         }
 
+
+        .preview-listing-wrapper {
+            width: 350px;
+            border: 1px solid $clr6;
+            border-radius: 20px;
+            overflow: hidden;
+            padding: 10px;
+            margin: auto;
+            .preview-img-con {
+                // width: 200px;
+                width: 100%;
+                // height: 200px;
+                border-radius: 10px;
+
+                img {
+                    width: 100%;
+                    height: 200px;
+                    aspect-ratio: 1/1;
+                    object-fit: cover;
+                    border-radius: 10px;
+                }
+            }
+            .preview-header{
+                padding: 10px;
+                border-bottom: 1px solid $clr6;
+            }
+            .preview-property{
+                display: flex;
+                justify-content: space-between;
+                padding: 10px;
+                border-bottom: 1px solid $clr6;
+                span{
+                    width: 70%;
+                    font-weight: 600;
+                    font-size: rem(18px);
+                }
+                .avatar-con{
+                    width: 30px;
+                    height: 30px;
+                    overflow: hidden;
+                    border-radius: 50%;
+                    img{
+                        width: 100%;
+                       object-fit: cover; 
+                    }
+                }
+            }
+
+            .preview-capacity{
+                display: flex;
+                .proprietary-info-con{
+                    width: 100%;
+                    padding: 10px;
+                    border-bottom: 1px solid $clr6;
+                    font-weight: 600;
+
+                }
+                
+            }
+            .preview-desc{
+                padding: 10px;
+                border-bottom: 1px solid $clr6;
+            }
+            .preview-location{
+                padding: 10px;
+            }
+
+            .btn-save-listing{
+                background-color: $clr1;
+                color: $clr1;
+                padding: 5px;
+            }
+        }
+
         .paging-wrapper {
             position: fixed;
             bottom: 0;
-            right:0;
+            right: 0;
             z-index: 2;
             width: 50%;
+
             // display: flex;
             // flex-direction: column;
             // justify-content: center;
@@ -407,8 +605,125 @@
                     border-radius: 8px;
                     cursor: pointer;
                 }
+
+                .btn-save-listing{
+                    background-color: $clr1;
+                    color: $clr2;
+                    font-weight: 600;
+                    padding: 15px;
+                    border-radius: 8px;
+                    cursor: pointer;
+                    outline: none;
+                    border: none;
+                }
             }
 
+        }
+    }
+
+
+    .side-con{
+        flex-basis: 50%;
+        background-color: black;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        padding: 40px;
+        gap: 30px;
+        >* {
+            font-size: rem(60px);
+            max-width: 550px;
+            color: $clr2;
+        //    font-family: 'AirBold';
+            // margin-left: 40px;
+            font-size: 'AirMedium';
+            font-weight: bold;
+        }
+        .btn-container {
+            position: relative;
+            // width: 100%;
+            width: 150px;
+            height: 48px;
+            padding: 0 0;
+            margin: 0 0;
+            cursor: pointer;
+            border: none;
+            display: grid;
+            grid-template: repeat(10, 1fr) / repeat(10, 1fr);
+          
+            @for $i from 0 to 10 {
+              .cell:nth-child(10n + #{$i + 1}):hover ~ .content {
+                --positionX: #{$i};
+              }
+          
+              .cell:nth-child(n + #{10 * $i + 1}):nth-child(-n + #{10 * ($i + 1)}):hover
+                ~ .content {
+                --positionY: #{$i};
+              }
+            }
+          }
+          
+          .cell {
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+            // border: 1px solid rgba(128, 128, 128, 0.753);
+          }
+          
+          .content {
+            --positionX: 0;
+            --positionY: 5;
+          
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+            border-radius: 8px;
+          
+            background-image: radial-gradient(
+              circle at calc((0 + var(--positionX, 0)) * 10%)
+                calc((0 + var(--positionY, 0)) * 5%),
+              rgb(241, 37, 75) 0%,
+              rgb(230, 30, 77) 27.5%,
+              rgb(227, 28, 95) 40%,
+              rgb(215, 4, 102) 57.5%,
+              rgb(189, 30, 89) 75%,
+              rgb(189, 30, 89) 100%
+            );
+          }
+          
+          .action-btn {
+            padding: 0 0;
+            margin: 0 0;
+            width: 100%;
+            height: 100%;
+            background-color: transparent;
+            border: none;
+          }
+          
+          span {
+            padding: 0 0;
+            margin: 0 0;
+            color: white;
+            font-size: 16px;
+            line-height: 20px;
+            font-weight: 600;
+            font-family: sans-serif;
+          }
+          
+    }
+    .video-wrapper{
+        flex-basis: 50%;
+
+        video{
+            width: 100%;
+            object-fit: cover;
         }
     }
 }
