--- a/src/styles/cmps/_login-signup.scss
+++ b/src/styles/cmps/_login-signup.scss
@@ -11,30 +11,30 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 290px;
-    height: 300px;
 
     // padding: 40px 20px 40px 20px;
     .login-wrapper {
         display: flex;
         flex-direction: column;
-        justify-content: space-evenly;
+        justify-content: space-between;
         align-items: center;
-        width: 100%;
-        height: 100%;
+        gap: 12px;
+        padding: 20px 32px;
 
         .title {
             align-self: center;
             font-size: rem(20px);
         }
     }
-    .signup-wrapper{
+
+    .signup-wrapper {
         display: flex;
         flex-direction: column;
-        justify-content: space-evenly;
+        justify-content: space-between;
         align-items: center;
-        width: 100%;
-        height: 100%;
+        gap: 12px;
+        padding: 20px 32px;
+
         .title {
             align-self: center;
             font-size: rem(20px);
@@ -45,9 +45,6 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
-        label {
-            color: $clr1;
-        }
 
         input {
             width: 200px;
@@ -58,19 +55,20 @@
             outline: none;
             font-size: rem(17px);
             color: $clr4;
-            
+            padding: 7px;
+
             &::placeholder {
                 color: $clr4;
                 font-size: rem(17px);
                 // text-align: center;
                 // padding-inline-start:5px;
-                top: 0px;
-                position: absolute;
+                // top: 0px;
+                // position: absolute;
 
 
             }
 
-            
+
         }
 
 
@@ -85,5 +83,5 @@
             cursor: pointer;
         }
     }
- 
+
 }
