--- a/src/styles/cmps/_stay-reservation.scss
+++ b/src/styles/cmps/_stay-reservation.scss
@@ -3,7 +3,8 @@
     position: sticky;
     top: 130px;
     margin-bottom: 20px;
-
+     z-index: 2;
+    // width: 50%;
     .reservation-wrapper {
         display: flex;
         flex-direction: column;
@@ -11,7 +12,9 @@
         border: 1px solid $clr6 ;
         border-radius: 10px;
         width: 372px;
+        // width: 100%;
         gap: 20px;
+        box-shadow: rgba(0, 0, 0, 0.12) 0px 6px 16px;
 
         .reservation-heder {
             display: flex;
@@ -32,16 +35,20 @@
                     }
                 }
             }
-            .rate-con{
+
+            .rate-con {
                 display: flex;
                 align-items: center;
                 gap: 5px;
-                span:not(:last-child){
+
+                span:not(:last-child) {
                     font-weight: 600;
                 }
-                svg{
+
+                svg {
                     font-size: rem(15px);
                 }
+
                 .reviews-length {
                     color: $clr4;
                     font-size: rem(16px);
@@ -101,6 +108,7 @@
                         position: relative;
                         z-index: 1;
                         width: 99.5%;
+                        // width: 100%;
                         height: 55px;
                         border: 1px solid #c4c4c4;
                         border-top: none;
@@ -198,41 +206,36 @@
                         }
                     }
 
-                    // input {
-                    //     border: none;
-
-
-                    //     &:focus {
-                    //         border-radius: 10px;
-                    //         overflow: visible;
-                    //     }
-
-                    // }
-
-                    // input[name="guestsNum"] {
-                    //     width: 100%;
-                    //     padding: 15px;
-
-                    // }
-
+                    
 
                 }
 
-                .btn-reserve {
-                    font-size: rem(18px);
-                    font-weight: bold;
-                    background-color: $clr1;
-                    color: $clr2;
-                    border: none;
-                    border-radius: 5px;
-                    padding: 15px;
-                    cursor: pointer;
-                }
+                // .btn-reserve {
+                //     font-size: rem(18px);
+                //     font-weight: bold;
+                //     background-color: $clr1;
+                //     color: $clr2;
+                //     border: none;
+                //     border-radius: 5px;
+                //     padding: 15px;
+                //     cursor: pointer;
+                // }
 
                 span {
                     align-self: center;
                     padding-bottom: 10px;
                     color: $clr4;
+                }
+
+                .btn-container {
+                    // align-self: flex-end;
+                    width: 100%;
+
+                    .btn-text {
+                        font-size: rem(15px);
+                        // font-weight: bold;
+                        color: $clr2;
+                    }
                 }
             }
         }
@@ -241,6 +244,17 @@
             display: flex;
             flex-direction: column;
             gap: 20px;
+
+            .btn-container {
+                // align-self: flex-end;
+                width: 100%;
+
+                .btn-text {
+                    font-size: rem(15px);
+                    // font-weight: bold;
+                    color: $clr2;
+                }
+            }
 
             .price-breakdown-con {
                 display: flex;
@@ -252,7 +266,8 @@
 
                     display: flex;
                     justify-content: space-between;
-                    >*:first-child{
+
+                    >*:first-child {
                         text-decoration: 0.01rem underline;
 
                     }
@@ -271,11 +286,13 @@
                     }
                 }
 
-                .green{
+                .green {
                     color: green
                 }
 
+
             }
+
 
             .total-con {
                 display: flex;
@@ -305,6 +322,7 @@
         top: 16%;
         background-color: $clr2;
         overflow: auto;
+        // z-index: 2;
 
         .confirmation-modal-header {
             display: flex;
@@ -395,9 +413,25 @@
 
             .price-breakdown-con {
                 display: flex;
+                flex-direction: column;
                 justify-content: space-between;
-                border-bottom: 1px solid $clr6 ;
-                padding-bottom: 20px;
+                gap: 10px;
+
+                >* {
+
+                    display: flex;
+                    justify-content: space-between;
+
+                    >*:first-child {
+                        text-decoration: 0.01rem underline;
+
+                    }
+                }
+
+                >:last-child {
+                    border-bottom: 1px solid $clr6 ;
+                    padding-bottom: 20px;
+                }
 
                 .price {
                     font-size: rem(18px);
@@ -409,12 +443,22 @@
 
             }
 
+            .btn-container{
+               
+                width: 100%;
+                .btn-text{
+                    font-size: rem(15px);
+                   
+                    color: $clr2;
+                }
+            }
+
             .total-con {
                 display: flex;
                 justify-content: space-between;
                 font-weight: bold;
                 font-size: rem(18px);
-                padding-top: 20px;
+                padding-block: 20px;
 
                 .total-price {
                     &::before {
