--- a/src/styles/views/_become-host.scss
+++ b/src/styles/views/_become-host.scss
@@ -278,9 +278,11 @@
                             top: 10px;
                             right: 10px;
                             // transform: translate(-50%, -50%);
-                            background-color: #fff;
-                            padding: 5px 10px;
+                            background-color: rgba(255, 255, 255, 0.589);
+                            border-radius: 50%;
+                            // padding: 5px 10px;
                             cursor: pointer;
+                            
                         }
 
                         &.cover {
