--- a/src/styles/views/_hosting-reservation.scss
+++ b/src/styles/views/_hosting-reservation.scss
@@ -97,4 +97,66 @@
         }
     }
 
+    .hosting-banner-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 48px;
+
+        .banner-title {
+            font-size: rem(50px);
+            font-weight: 600;
+            width: 600px;
+            text-align: center;
+        }
+
+        .stats-hosting-con {
+            display: flex;
+            gap: 20px;
+
+            >* {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                // gap: 10px;
+                width: 320px;
+                height: 100px;
+                padding: 7px 15px 7px 15px;
+                background-color: $clr7;
+                border-radius: 10px;
+
+                p {
+                    color: $clr4;
+                    font-weight: 600;
+
+                }
+
+                h1 {
+                    font-size: rem(35px);
+                    margin: 0;
+
+                    span {
+                        color: $clr3;
+                        font-size: rem(20px);
+                    }
+                }
+
+
+
+
+            }
+
+            .avg-income {
+
+                h1 {
+                    color: $clr1;
+
+                    span {
+                        color: $clr3;
+                        font-size: rem(20px);
+                    }
+                }
+            }
+        }
+    }
 }
