--- a/src/styles/basics/_layout.scss
+++ b/src/styles/basics/_layout.scss
@@ -56,7 +56,12 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.29);
-    z-index: 2;
-    pointer-events: auto;
+    z-index: 10;
+    pointer-events: none;
+    
+    &.on{
+        pointer-events: all;
+        background-color: rgba(0, 0, 0, 0.29);
+    }
 }
+
