--- a/src/styles/cmps/_explore-filter.scss
+++ b/src/styles/cmps/_explore-filter.scss
@@ -1,102 +1,107 @@
-.explore-filter-main-wrapper {
+.explore-filter-wrapper {
 
     // position: sticky;
     // top: 0px;
     // z-index: 1;
     // background-color: $clr2;
-    .filter-content-wrapper {
-        position: relative;
+    // .filter-content-wrapper {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 30px;
+    // background-color: $clr2;
+
+    .category-filterbar-wrapper {
         display: flex;
         align-items: center;
-        justify-content: space-between;
-        margin-bottom: 30px;
-        background-color: $clr2;
+        gap: 10px;
 
-        .category-filterbar-wrapper {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-
-            img{
-                width: 25px;
-                height: 25px;
-                // color: $clr6;
-            }
-            // font-weight: bold;
-            // font-family: AirBold;
-            >* {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                border-bottom: 2px solid rgba(255, 255, 255, 0);
-                cursor: pointer;
-                padding: 10px;
-                color: $clr4;
-                font-family: 'AirMedium';
-                font-size: rem(15px);
-                text-align: center;
-                // aspect-ratio: 1/1;
-            }
-
-            .active {
-                border-bottom: 2px solid $clr3;
-                color: $clr3;
-            }
-
-            >*:hover {
-                border-bottom: 2px solid $clr6;
-                color: $clr3;
-            }
-
+        img {
+            width: 25px;
+            height: 25px;
+            // color: $clr6;
         }
 
-        .btn-filter-modal {
-            background-color: $clr2;
-            border: 1px solid $clr6;
-            border-radius: 10px;
-            font-size: rem(17px);
-            padding: 13px 20px 13px 20px;
-            cursor: pointer;
-            display: flex;
-            font-family: 'AirMedium';
-            // align-self: flex-end;
-            // justify-content: flex-end;
-        }
-
-
-        .filter-options-modal-wrapper {
-            position: fixed;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            z-index: 2;
-            width: 700px;
-            height: 60vh;
-            background-color: $clr2;
-            border: 1px solid $clr4;
-            border-radius: 15px;
-            padding: 20px;
+        // font-weight: bold;
+        // font-family: AirBold;
+        >* {
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: space-between;
-            overflow-y: auto;
+            border-bottom: 2px solid rgba(255, 255, 255, 0);
+            cursor: pointer;
+            padding: 10px;
+            color: $clr4;
+            font-family: 'AirMedium';
+            font-size: rem(15px);
+            text-align: center;
+            // aspect-ratio: 1/1;
+        }
 
-            // bottom: -1000px;
-            .modal-header {
-                width: 100%;
-                border-bottom: 1px solid $clr6;
-                text-align: center;
-                padding-bottom: 10px;
+        .active {
+            border-bottom: 2px solid $clr3;
+            color: $clr3;
+        }
+
+        >*:hover {
+            border-bottom: 2px solid $clr6;
+            color: $clr3;
+        }
+
+    }
+
+    .btn-filter-modal {
+        background-color: $clr2;
+        border: 1px solid $clr6;
+        border-radius: 10px;
+        font-size: rem(17px);
+        padding: 13px 20px 13px 20px;
+        cursor: pointer;
+        display: flex;
+        font-family: 'AirMedium';
+        // align-self: flex-end;
+        // justify-content: flex-end;
+    }
+
+
+    .filter-options-modal-wrapper {
+        position: fixed;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 12;
+        // width: 700px;
+        height: 60vh;
+        background-color: $clr2;
+        border: 1px solid $clr4;
+        border-radius: 15px;
+        // padding: 20px;
+        display: flex;
+        flex-direction: column;
+        // align-items: center;
+        justify-content: space-between;
+        overflow-y: auto;
+
+        // bottom: -1000px;
+        .modal-header {
+            border-bottom: 1px solid $clr6;
+            text-align: center;
+            padding: 20px;
+        }
+
+        .filter-content {
+            overflow-y: scroll;
+
+            >* {
+                padding: 20px 24px 30px 24px;
             }
 
             .price-range-wrapper {
                 border-bottom: 1px solid $clr6;
-                padding: 20px 0px 30px 0px;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                width: 100%;
                 gap: 10px;
 
                 .price-range-title {
@@ -124,7 +129,6 @@
                     display: flex;
                     justify-content: center;
                     gap: 25px;
-                    width: 100%;
 
                     .min-con,
                     .max-con {
@@ -139,7 +143,7 @@
                         // overflow: hidden;
                         padding: 5px 0px 0px 10px;
 
-            
+
                     }
 
                     // .max-con{
@@ -162,9 +166,9 @@
                         //    background-color: gray;
                         // &::before{
                         //     content: '\0024';
-                            
+
                         // }
-                       &::-webkit-inner-spin-button {
+                        &::-webkit-inner-spin-button {
                             -webkit-appearance: none;
                             margin: 0;
                         }
@@ -173,59 +177,71 @@
 
             }
 
-            .check-boxs-wrappeer {
+            .room-types {
                 // border-bottom: 1px solid $clr6 ;
                 // padding: 40px 30px 30px 40px ;
                 // padding-bottom: 40px;
                 display: flex;
-                // flex-direction: column;
-                padding-block: 30px;
-                width: 100%;
-                h1{
+                flex-direction: column;
+                // padding-block: 30px;
+
+                h1 {
                     font-size: rem(22px);
-                    padding-bottom:20px;
-                    width: 100%;
+                    padding-bottom: 20px;
+                    // width: 100%;
                 }
-                .label-con{
-                    display: flex;
-                    width:300px;
-                    .text-con{
-                        padding-top: 18px;
-                        p:first-child{
-                            font-weight: 600;
+
+                .checkboxes-wrapper {
+                    display: grid;
+                    grid-template-columns: 1fr 1fr;
+
+                    .label-con {
+                        display: flex;
+                        align-items: start;
+                        gap: 8px;
+
+                        .text-con {
+                            // padding-top: 18px;
+
+                            p:first-child {
+                                font-weight: 600;
+                            }
                         }
                     }
-                }
-             
-            }
 
-            .submit-search-con {
-                background-color: $clr2;
-                position: sticky;
-                bottom: 0;
-                border-top: 1px solid $clr6;
-                // height: 50px; //temp
-                padding-block: 10px;
-                background-color: $clr2;
-                width: 100%;
-                display: flex;
-                justify-content: flex-end;
-                z-index: 1;
-
-                .btn-submit-filter {
-                    background-color: $clr3;
-                    color: $clr2;
-                    font-size: rem(17px);
-                    font-family: 'AirMedium';
-                    padding: 13px 20px 13px 20px;
-                    cursor: pointer;
-                    border-radius: 10px;
-
+                    .css-dk24d0-MuiButtonBase-root-MuiCheckbox-root{
+                        padding: 0;
+                    }
                 }
             }
+        }
 
+        .submit-search-con {
+            background-color: $clr2;
+            position: sticky;
+            bottom: 0;
+            border-top: 1px solid $clr6;
+            // height: 50px; //temp
+            padding: 16px 24px;
+            background-color: $clr2;
+            display: flex;
+            justify-content: flex-end;
+            z-index: 1;
+
+            .btn-submit-filter {
+                background-color: $clr3;
+                color: $clr2;
+                font-size: rem(17px);
+                font-family: 'AirMedium';
+                padding: 13px 20px 13px 20px;
+                cursor: pointer;
+                border-radius: 10px;
+
+            }
         }
 
     }
+
+    // }
 
 }
