--- a/src/styles/cmps/_listing.scss
+++ b/src/styles/cmps/_listing.scss
@@ -1,4 +1,5 @@
 .listing-main-wrapper {
+
     // max-width: 70vw;
     // width: 80%;
     // display: flex;
@@ -36,29 +37,35 @@
 
     table {
         width: 100%;
+        color: $clr3;
+
+        border-collapse: collapse;
 
         tr {
-            border-bottom: 1px solid $clr4;
+            border-bottom: 1px solid $clr6;
 
-            &:hover {
+
+        }
+
+        tbody {
+            tr:hover {
                 background-color: $clr7;
                 transition: background-color 0.3s ease-in-out;
             }
-            // width: 100%;
-            th {
-                text-align: start;
-                font-size: rem(17px);
-                padding-block: 7px;
-                border-bottom: 1px solid $clr6;
-                // color: $clr4;
-            }
 
-            td {
-                padding-block: 7px;
-                border-bottom: 1px solid $clr6;
-                // font-weight: 600;
-                color: $clr3;
-            }
+            
+        }
+        td {
+            text-align: start;
+            padding-block: 7px;
+        }
+        
+        th {
+            font-size: rem(17px);
+            padding-block: 7px;
+            text-align: start;
+            // border-bottom: 1px solid $clr6;
+            // color: $clr4;
         }
 
         .name-img-cell {
@@ -76,6 +83,7 @@
                 }
             }
         }
+
     }
 
     .hosting-banner-wrapper {
@@ -84,6 +92,7 @@
         height: 85%;
         // position: relative;
         margin: auto;
+
         // height: 400px;
         // overflow: hidden;
         .side {
@@ -100,24 +109,28 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            & :nth-child(2){
+
+            & :nth-child(2) {
                 padding-bottom: 20px;
             }
-            .btn-container{
+
+            .btn-container {
                 align-self: flex-end;
-                .btn-text{
+
+                .btn-text {
                     font-size: rem(15px);
-                    text-transform:uppercase;
+                    text-transform: uppercase;
                 }
             }
         }
 
-        .img-container{
+        .img-container {
             width: 100%;
             height: 90%;
             border-radius: 15px;
             overflow: hidden;
-            img{
+
+            img {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
@@ -129,19 +142,19 @@
         // max-width:600px;
         // max-height: 400px;
         // video {
-            // position: fixed;
-            // bottom: 0;
-            // left: 0;
-            // top:80px;
-            // right: 0;
-            // width: 100%;
-            // height: 100%;
-            // background-position: center;
-            // object-fit: cover;
-            // margin: 0;
-            // z-index: 2;
+        // position: fixed;
+        // bottom: 0;
+        // left: 0;
+        // top:80px;
+        // right: 0;
+        // width: 100%;
+        // height: 100%;
+        // background-position: center;
+        // object-fit: cover;
+        // margin: 0;
+        // z-index: 2;
         // }
-    
+
 
         // }
     }
