--- a/src/styles/views/_user-profile.scss
+++ b/src/styles/views/_user-profile.scss
@@ -8,6 +8,7 @@
        width: 300px;
         border-radius: 15px;
         padding: 20px;
+        align-self: flex-start;
         .img-container{
             width: 130px;
             height: 130px;
@@ -24,7 +25,7 @@
             }
         }
         .confirmation{
-            
+        
         }
     }
     .profile-main-content{
