--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -1,9 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+2&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap');
-// @font-face {
-//     font-family: AirLight;
-//     src: url(../../../public/assets/fonts/AirbnbCerealLight.woff);
-// }
 
 * {
     box-sizing: border-box;
@@ -14,16 +8,9 @@ html {
 
 body{
     margin: 0;
-    // background-color: $clr4;
-    // font-family: Arial, Helvetica, sans-serif;
     font-family: 'AirLight';
-    // font-family: Circular, -apple-system,theFont, Helvetica ,Neue, sans-serif;
-    // font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
-    // -webkit-font-smoothing: antialiased;
+  
 }
-// font-family: 'Roboto', sans-serif;
-// Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif
-// font-family: 'Baloo 2', cursive;
 
 h1,
 h2,
@@ -40,6 +27,6 @@ a {
     color: inherit;
 }
 
-// .App{
-//     position: relative;
-// }
+button{
+    font-family: inherit;
+}
