--- a/src/styles/basics/_mixins.scss
+++ b/src/styles/basics/_mixins.scss
@@ -1,7 +1,7 @@
 /* Media queries Breakpoint mixins */
 
 @mixin for-mobile-layout {
-  @media (max-width: $break-narrow) {
+  @media (min-width: $break-narrow) {
     @content;
   }
 }
